# iot-server-fastapi

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  gencert.sh  main.py  pyproject.toml  requirements.txt  run.py  settings.py  zeroconf_service.py
app/: main.py  zeroconf_service.py
