[tool.poetry]
name = "fastapi-boilerplate"
version = "1.0.0"
description = "FastAPI Boilerplate"
authors = ["KoiReader Technologies"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = {version = "^0.55.1", extras = ["all"]}
loguru = "^0.5.0"
python-dotenv = "^0.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
